Flesh out Batman.RailsStorage
 - refactor RestStorage tests so the suite can be run against other adapters as well (into rest_storage_helper.coffee)
 - make Batman.Rails storage use .json urls always
 - add Batman.RailsStorage afterCreate, afterUpdate which will catch server side errors and add them to the model
 - add tests for RailsStorage to tests/batman/storage_adapters/rails_storage_test.coffee

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -40,7 +40,9 @@
     <script type="text/coffeescript" src="model/dirty_keys_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/storage_adapter_helper.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/local_storage_test.coffee"></script>
+    <script type="text/coffeescript" src="storage_adapter/rest_storage_helper.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/rest_storage_test.coffee"></script>
+    <script type="text/coffeescript" src="storage_adapter/rails_storage_test.coffee"></script>
     <script type="text/coffeescript" src="view/view_helper.coffee"></script>
     <script type="text/coffeescript" src="view/view_test.coffee"></script>
     <script type="text/coffeescript" src="view/simple_rendering_test.coffee"></script>
