--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -37,7 +37,9 @@
     <script type="text/javascript" src="model/dirty_keys_test.js"></script>
     <script type="text/javascript" src="storage_adapter/storage_adapter_helper.js"></script>
     <script type="text/javascript" src="storage_adapter/local_storage_test.js"></script>
+    <script type="text/javascript" src="storage_adapter/rest_storage_helper.js"></script>
     <script type="text/javascript" src="storage_adapter/rest_storage_test.js"></script>
+    <script type="text/javascript" src="storage_adapter/rails_storage_test.js"></script>
     <script type="text/javascript" src="view/view_helper.js"></script>
     <script type="text/javascript" src="view/view_test.js"></script>
     <script type="text/javascript" src="view/simple_rendering_test.js"></script>
