--- a/examples/alfred.html
+++ b/examples/alfred.html
@@ -63,7 +63,7 @@
         Todo.load (error, todos) ->
           # you always want to make sure you handle errors (more elegantly than this) when writing connection code
           throw error if error
-          if not todos.length
+          unless todos and todos.length
             callback = (error) -> throw error if error
             new Todo(body: 'joker escaped arkham again', isDone: true).save(callback)
             new Todo(body: 'riddler sent riemann hypothesis').save(callback)
