--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -44,6 +44,7 @@
     <script type="text/javascript" src="view/view_helper.js"></script>
     <script type="text/javascript" src="view/view_test.js"></script>
     <script type="text/javascript" src="view/simple_rendering_test.js"></script>
+    <script type="text/javascript" src="view/oneway_binding_test.js"></script>
     <script type="text/javascript" src="view/loop_rendering_test.js"></script>
     <script type="text/javascript" src="view/nested_loop_rendering_test.js"></script>
     <script type="text/javascript" src="view/yield_and_contentfor_test.js"></script>
