Allow Model.encode to be passed false for the encode or decode option for asymmetric encoders. Also, add the encoder tests back into to the browser HTML, I dropped them when breaking out the tests into separate files. Sorry!

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -38,6 +38,7 @@
     <script type="text/coffeescript" src="model/record_lifecycle_test.coffee"></script>
     <script type="text/coffeescript" src="model/state_transitions_test.coffee"></script>
     <script type="text/coffeescript" src="model/validations_test.coffee"></script>
+    <script type="text/coffeescript" src="model/encoders_test.coffee"></script>
     <script type="text/coffeescript" src="model/dirty_keys_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/storage_adapter_helper.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/local_storage_test.coffee"></script>
