--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="model/record_lifecycle_test.js"></script>
     <script type="text/javascript" src="model/state_transitions_test.js"></script>
     <script type="text/javascript" src="model/validations_test.js"></script>
+    <script type="text/javascript" src="model/encoders_test.js"></script>
     <script type="text/javascript" src="model/dirty_keys_test.js"></script>
     <script type="text/javascript" src="storage_adapter/storage_adapter_helper.js"></script>
     <script type="text/javascript" src="storage_adapter/local_storage_test.js"></script>
