Events and Properties overhaul

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -18,7 +18,6 @@
     <script type="text/coffeescript">Batman.exportGlobals()</script>
 
     <script type="text/coffeescript" src="utilities/mixin_test.coffee"></script>
-    <script type="text/coffeescript" src="utilities/event_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/block_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/get_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/_batman_test.coffee"></script>
@@ -31,6 +30,8 @@
     <script type="text/coffeescript" src="data_test.coffee"></script>
     <script type="text/coffeescript" src="dispatcher_test.coffee"></script>
     <script type="text/coffeescript" src="helpers_test.coffee"></script>
+    <script type="text/coffeescript" src="events/event_test.coffee"></script>
+    <script type="text/coffeescript" src="events/event_emitter_test.coffee"></script>
     <script type="text/coffeescript" src="model/model_helper.coffee"></script>
     <script type="text/coffeescript" src="model/model_test.coffee"></script>
     <script type="text/coffeescript" src="model/class_querying_test.coffee"></script>
