--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -17,8 +17,8 @@
     <script type="text/javascript">Batman.exportGlobals();</script>
 
     <script type="text/javascript" src="utilities/mixin_test.js"></script>
-    <script type="text/javascript" src="utilities/event_test.js"></script>
     <script type="text/javascript" src="utilities/block_test.js"></script>
+    <script type="text/javascript" src="utilities/get_test.js"></script>
     <script type="text/javascript" src="utilities/_batman_test.js"></script>
     <script type="text/javascript" src="utilities/state_machine_test.js"></script>
     <script type="text/javascript" src="object/class_dsl_test.js"></script>
@@ -28,6 +28,9 @@
     <script type="text/javascript" src="controller_test.js"></script>
     <script type="text/javascript" src="data_test.js"></script>
     <script type="text/javascript" src="dispatcher_test.js"></script>
+    <script type="text/javascript" src="helpers_test.js"></script>
+    <script type="text/javascript" src="events/event_test.js"></script>
+    <script type="text/javascript" src="events/event_emitter_test.js"></script>
     <script type="text/javascript" src="model/model_helper.js"></script>
     <script type="text/javascript" src="model/model_test.js"></script>
     <script type="text/javascript" src="model/class_querying_test.js"></script>
