Add Batman.Enumerable with map, some, every, filter, and reduce functions.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -61,6 +61,7 @@
     <script type="text/coffeescript" src="property/property_test.coffee"></script>
     <script type="text/coffeescript" src="observable/class_and_instance_observable_test.coffee"></script>
     <script type="text/coffeescript" src="observable/observable_test.coffee"></script>
+    <script type="text/coffeescript" src="enumerable_test.coffee"></script>
     <script type="text/coffeescript" src="hash_test.coffee"></script>
     <script type="text/coffeescript" src="accessible_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_test.coffee"></script>
