--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -58,6 +58,7 @@
     <script type="text/javascript" src="property/property_test.js"></script>
     <script type="text/javascript" src="observable/class_and_instance_observable_test.js"></script>
     <script type="text/javascript" src="observable/observable_test.js"></script>
+    <script type="text/javascript" src="enumerable_test.js"></script>
     <script type="text/javascript" src="hash_test.js"></script>
     <script type="text/javascript" src="accessible_test.js"></script>
     <script type="text/javascript" src="set/set_test.js"></script>
