Fix #142: Ensure IE loads in its highest standard mode in the examples

--- a/examples/alfred.html
+++ b/examples/alfred.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Alfred: Batman's Todos</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="resources/alfred.css" type="text/css">
