--- a/examples/hello.html
+++ b/examples/hello.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Hello Batman</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
     <link rel="stylesheet" href="resources/reset.css" type="text/css">
     <link rel="stylesheet" href="resources/hello.css" type="text/css">
