Switched to a persistent tree structure for RenderContext. Fix #88.

--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -52,6 +52,7 @@
     <script type="text/javascript" src="view/loop_rendering_test.js"></script>
     <script type="text/javascript" src="view/nested_loop_rendering_test.js"></script>
     <script type="text/javascript" src="view/yield_and_contentfor_test.js"></script>
+    <script type="text/javascript" src="view/partial_rendering_test.js"></script>
     <script type="text/javascript" src="view/formfor_rendering_test.js"></script>
     <script type="text/javascript" src="view/filter_rendering_test.js"></script>
     <script type="text/javascript" src="view/filter_execution_test.js"></script>
