Revamp the distribution build process, and use an extras folder.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -14,7 +14,7 @@
 
     <script type="text/coffeescript" src="test_helper.coffee"></script>
     <script type="text/coffeescript" src="../../src/batman.coffee"></script>
-    <script type="text/coffeescript" src="../../src/batman.rails.coffee"></script>
+    <script type="text/coffeescript" src="../../src/extras/batman.rails.coffee"></script>
     <script type="text/coffeescript">Batman.exportGlobals()</script>
 
     <script type="text/coffeescript" src="utilities/mixin_test.coffee"></script>
