Add Batman.I18N extra.
 - Add Batman.I18N object in the extra file
 - Add tests
 - make interpolation able to do pluralization instead of just I18N
 - require the extras explicitly during tests.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -15,6 +15,7 @@
     <script type="text/coffeescript" src="test_helper.coffee"></script>
     <script type="text/coffeescript" src="../../src/batman.coffee"></script>
     <script type="text/coffeescript" src="../../src/extras/batman.rails.coffee"></script>
+    <script type="text/coffeescript" src="../../src/extras/batman.i18n.coffee"></script>
     <script type="text/coffeescript">Batman.exportGlobals()</script>
 
     <script type="text/coffeescript" src="utilities/mixin_test.coffee"></script>
@@ -22,6 +23,8 @@
     <script type="text/coffeescript" src="utilities/get_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/_batman_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/state_machine_test.coffee"></script>
+    <script type="text/coffeescript" src="utilities/function_name_test.coffee"></script>
+    <script type="text/coffeescript" src="utilities/interpolation_test.coffee"></script>
     <script type="text/coffeescript" src="object/class_dsl_test.coffee"></script>
     <script type="text/coffeescript" src="object/integration_test.coffee"></script>
     <script type="text/coffeescript" src="object/subclass_test.coffee"></script>
@@ -29,7 +32,6 @@
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="data_test.coffee"></script>
     <script type="text/coffeescript" src="dispatcher_test.coffee"></script>
-    <script type="text/coffeescript" src="helpers_test.coffee"></script>
     <script type="text/coffeescript" src="events/event_test.coffee"></script>
     <script type="text/coffeescript" src="events/event_emitter_test.coffee"></script>
     <script type="text/coffeescript" src="model/model_helper.coffee"></script>
@@ -58,6 +60,7 @@
     <script type="text/coffeescript" src="view/filter_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/filter_execution_test.coffee"></script>
     <script type="text/coffeescript" src="view/route_rendering_test.coffee"></script>
+    <script type="text/coffeescript" src="i18n_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
     <script type="text/coffeescript" src="property/keypath_test.coffee"></script>
     <script type="text/coffeescript" src="property/property_test.coffee"></script>
