--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="test_helper.js"></script>
     <script type="text/javascript" src="../../src/batman.js"></script>
     <script type="text/javascript" src="../../src/extras/batman.rails.js"></script>
+    <script type="text/javascript" src="../../src/extras/batman.i18n.js"></script>
     <script type="text/javascript">Batman.exportGlobals();</script>
 
     <script type="text/javascript" src="utilities/mixin_test.js"></script>
@@ -21,6 +22,8 @@
     <script type="text/javascript" src="utilities/get_test.js"></script>
     <script type="text/javascript" src="utilities/_batman_test.js"></script>
     <script type="text/javascript" src="utilities/state_machine_test.js"></script>
+    <script type="text/javascript" src="utilities/function_name_test.js"></script>
+    <script type="text/javascript" src="utilities/interpolation_test.js"></script>
     <script type="text/javascript" src="object/class_dsl_test.js"></script>
     <script type="text/javascript" src="object/integration_test.js"></script>
     <script type="text/javascript" src="object/subclass_test.js"></script>
@@ -28,7 +31,6 @@
     <script type="text/javascript" src="controller_test.js"></script>
     <script type="text/javascript" src="data_test.js"></script>
     <script type="text/javascript" src="dispatcher_test.js"></script>
-    <script type="text/javascript" src="helpers_test.js"></script>
     <script type="text/javascript" src="events/event_test.js"></script>
     <script type="text/javascript" src="events/event_emitter_test.js"></script>
     <script type="text/javascript" src="model/model_helper.js"></script>
@@ -57,6 +59,7 @@
     <script type="text/javascript" src="view/filter_rendering_test.js"></script>
     <script type="text/javascript" src="view/filter_execution_test.js"></script>
     <script type="text/javascript" src="view/route_rendering_test.js"></script>
+    <script type="text/javascript" src="i18n_test.js"></script>
     <script type="text/javascript" src="request_test.js"></script>
     <script type="text/javascript" src="property/keypath_test.js"></script>
     <script type="text/javascript" src="property/property_test.js"></script>
