Add Batman.setImmediate for fast stack popping.
 - Close #166

--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="utilities/state_machine_test.js"></script>
     <script type="text/javascript" src="utilities/function_name_test.js"></script>
     <script type="text/javascript" src="utilities/interpolation_test.js"></script>
+    <script type="text/javascript" src="utilities/set_immediate_test.js"></script>
     <script type="text/javascript" src="object/class_dsl_test.js"></script>
     <script type="text/javascript" src="object/integration_test.js"></script>
     <script type="text/javascript" src="object/subclass_test.js"></script>
