Initial ModelDraft implementation.
 - Drafts proxy their parent's attributes, but sets on a draft "latch" to the draft and don't affect the parent
 - Saving a draft applies the draft's attributes to the parent if the save is successful
 - Drafts can have draft parents
 - Destroying a record destroys all its drafts
 - saving a draft saves all the parents
 - $mixin now takes hashes
 - dirty key tracking now behaves itself in many more situations

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -55,7 +55,7 @@
     <script type="text/coffeescript" src="model/associations_test.coffee"></script>
     <script type="text/coffeescript" src="model/class_querying_test.coffee"></script>
     <script type="text/coffeescript" src="model/instance_manipulation_test.coffee"></script>
-    <script type="text/coffeescript" src="model/record_lifecycle_test.coffee"></script>
+    <script type="text/coffeescript" src="model/draft_test.coffee"></script>
     <script type="text/coffeescript" src="model/state_transitions_test.coffee"></script>
     <script type="text/coffeescript" src="model/validations_test.coffee"></script>
     <script type="text/coffeescript" src="model/encoders_test.coffee"></script>
