--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -54,7 +54,7 @@
     <script type="text/javascript" src="model/associations_test.js"></script>
     <script type="text/javascript" src="model/class_querying_test.js"></script>
     <script type="text/javascript" src="model/instance_manipulation_test.js"></script>
-    <script type="text/javascript" src="model/record_lifecycle_test.js"></script>
+    <script type="text/javascript" src="model/draft_test.js"></script>
     <script type="text/javascript" src="model/state_transitions_test.js"></script>
     <script type="text/javascript" src="model/validations_test.js"></script>
     <script type="text/javascript" src="model/encoders_test.js"></script>
