--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -70,6 +70,7 @@
     <script type="text/coffeescript" src="enumerable_test.coffee"></script>
     <script type="text/coffeescript" src="hash_test.coffee"></script>
     <script type="text/coffeescript" src="accessible_test.coffee"></script>
+    <script type="text/coffeescript" src="paginator_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_index_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_sort_test.coffee"></script>
