--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -70,6 +70,7 @@
     <script type="text/javascript" src="hash_test.js"></script>
     <script type="text/javascript" src="accessible_test.js"></script>
     <script type="text/javascript" src="paginator_test.js"></script>
+    <script type="text/javascript" src="model_paginator_test.js"></script>
     <script type="text/javascript" src="set/set_test.js"></script>
     <script type="text/javascript" src="set/set_index_test.js"></script>
     <script type="text/javascript" src="set/set_sort_test.js"></script>
