--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -71,6 +71,7 @@
     <script type="text/coffeescript" src="hash_test.coffee"></script>
     <script type="text/coffeescript" src="accessible_test.coffee"></script>
     <script type="text/coffeescript" src="paginator_test.coffee"></script>
+    <script type="text/coffeescript" src="model_paginator_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_index_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_sort_test.coffee"></script>
