Reorder test inclusion so association tests can use view helpers

--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -37,8 +37,21 @@
     <script type="text/javascript" src="navigator/hashbang_navigator_test.js"></script>
     <script type="text/javascript" src="events/event_test.js"></script>
     <script type="text/javascript" src="events/event_emitter_test.js"></script>
+    <script type="text/javascript" src="view/view_helper.js"></script>
+    <script type="text/javascript" src="view/view_test.js"></script>
+    <script type="text/javascript" src="view/simple_rendering_test.js"></script>
+    <script type="text/javascript" src="view/oneway_binding_test.js"></script>
+    <script type="text/javascript" src="view/loop_rendering_test.js"></script>
+    <script type="text/javascript" src="view/nested_loop_rendering_test.js"></script>
+    <script type="text/javascript" src="view/yield_and_contentfor_test.js"></script>
+    <script type="text/javascript" src="view/partial_rendering_test.js"></script>
+    <script type="text/javascript" src="view/formfor_rendering_test.js"></script>
+    <script type="text/javascript" src="view/filter_rendering_test.js"></script>
+    <script type="text/javascript" src="view/filter_execution_test.js"></script>
+    <script type="text/javascript" src="view/route_rendering_test.js"></script>
     <script type="text/javascript" src="model/model_helper.js"></script>
     <script type="text/javascript" src="model/model_test.js"></script>
+    <script type="text/javascript" src="model/associations_test.js"></script>
     <script type="text/javascript" src="model/class_querying_test.js"></script>
     <script type="text/javascript" src="model/instance_manipulation_test.js"></script>
     <script type="text/javascript" src="model/record_lifecycle_test.js"></script>
@@ -51,19 +64,6 @@
     <script type="text/javascript" src="storage_adapter/rest_storage_helper.js"></script>
     <script type="text/javascript" src="storage_adapter/rest_storage_test.js"></script>
     <script type="text/javascript" src="storage_adapter/rails_storage_test.js"></script>
-    <script type="text/javascript" src="view/view_helper.js"></script>
-    <script type="text/javascript" src="view/view_test.js"></script>
-    <script type="text/javascript" src="view/simple_rendering_test.js"></script>
-    <script type="text/javascript" src="view/unbinding_test.js"></script>
-    <script type="text/javascript" src="view/oneway_binding_test.js"></script>
-    <script type="text/javascript" src="view/loop_rendering_test.js"></script>
-    <script type="text/javascript" src="view/nested_loop_rendering_test.js"></script>
-    <script type="text/javascript" src="view/yield_and_contentfor_test.js"></script>
-    <script type="text/javascript" src="view/partial_rendering_test.js"></script>
-    <script type="text/javascript" src="view/formfor_rendering_test.js"></script>
-    <script type="text/javascript" src="view/filter_rendering_test.js"></script>
-    <script type="text/javascript" src="view/filter_execution_test.js"></script>
-    <script type="text/javascript" src="view/route_rendering_test.js"></script>
     <script type="text/javascript" src="i18n_test.js"></script>
     <script type="text/javascript" src="request_test.js"></script>
     <script type="text/javascript" src="property/keypath_test.js"></script>
