--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="controller_test.js"></script>
     <script type="text/javascript" src="data_test.js"></script>
     <script type="text/javascript" src="dispatcher_test.js"></script>
+    <script type="text/javascript" src="history_manager_test.js"></script>
     <script type="text/javascript" src="events/event_test.js"></script>
     <script type="text/javascript" src="events/event_emitter_test.js"></script>
     <script type="text/javascript" src="model/model_helper.js"></script>
