--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -33,7 +33,9 @@
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="data_test.coffee"></script>
     <script type="text/coffeescript" src="dispatcher_test.coffee"></script>
-    <script type="text/coffeescript" src="history_manager_test.coffee"></script>
+    <script type="text/coffeescript" src="state_history_test.coffee"></script>
+    <script type="text/coffeescript" src="hash_history_test.coffee"></script>
+    <script type="text/coffeescript" src="navigation_test.coffee"></script>
     <script type="text/coffeescript" src="events/event_test.coffee"></script>
     <script type="text/coffeescript" src="events/event_emitter_test.coffee"></script>
     <script type="text/coffeescript" src="model/model_helper.coffee"></script>
