rename HistoryManager classes to Navigator, PushStateNavigator, and HashbangNavigator

--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -32,9 +32,9 @@
     <script type="text/javascript" src="controller_test.js"></script>
     <script type="text/javascript" src="data_test.js"></script>
     <script type="text/javascript" src="dispatcher_test.js"></script>
-    <script type="text/javascript" src="state_history_test.js"></script>
-    <script type="text/javascript" src="hash_history_test.js"></script>
-    <script type="text/javascript" src="navigation_test.js"></script>
+    <script type="text/javascript" src="navigator/navigator_test.js"></script>
+    <script type="text/javascript" src="navigator/push_state_navigator_test.js"></script>
+    <script type="text/javascript" src="navigator/hashbang_navigator_test.js"></script>
     <script type="text/javascript" src="events/event_test.js"></script>
     <script type="text/javascript" src="events/event_emitter_test.js"></script>
     <script type="text/javascript" src="model/model_helper.js"></script>
