Add batman-classifieds to examples page

--- a/examples.html
+++ b/examples.html
@@ -28,6 +28,10 @@ layout: default
       <h4>A Simple Twitter Search Client</h4>
       <p>The running example is running on Heroku <a href="http://afternoon-moon-519.herokuapp.com">here</a> and the code is on GitHub <a href="https://github.com/ktusznio/Bat-Tracer">here</a>.</p>
     </li>
+    <li class="feature-description">
+      <h4>Batman Classifieds</h4>
+      <p>A complete open-source Batman app working on top of Rails. <a href="http://batman-classifieds.heroku.com">Live example</a> and <a href="https://github.com/Shopify/batman-classifieds">source code</a>.</p>
+    </li>
   </ul>
 
 </div>
