Break out associations tests into separate files.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -52,7 +52,10 @@
     <script type="text/coffeescript" src="view/route_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="model/model_helper.coffee"></script>
     <script type="text/coffeescript" src="model/model_test.coffee"></script>
-    <script type="text/coffeescript" src="model/associations_test.coffee"></script>
+    <script type="text/coffeescript" src="model/associations/associations_test.coffee"></script>
+    <script type="text/coffeescript" src="model/associations/has_one_test.coffee"></script>
+    <script type="text/coffeescript" src="model/associations/belongs_to_test.coffee"></script>
+    <script type="text/coffeescript" src="model/associations/has_many_test.coffee"></script>
     <script type="text/coffeescript" src="model/class_querying_test.coffee"></script>
     <script type="text/coffeescript" src="model/instance_manipulation_test.coffee"></script>
     <script type="text/coffeescript" src="model/record_lifecycle_test.coffee"></script>
