--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -51,8 +51,11 @@
     <script type="text/javascript" src="view/route_rendering_test.js"></script>
     <script type="text/javascript" src="model/model_helper.js"></script>
     <script type="text/javascript" src="model/model_test.js"></script>
-    <script type="text/javascript" src="model/associations_test.js"></script>
     <script type="text/javascript" src="model/class_querying_test.js"></script>
+    <script type="text/javascript" src="model/associations/associations_test.js"></script>
+    <script type="text/javascript" src="model/associations/has_one_test.js"></script>
+    <script type="text/javascript" src="model/associations/belongs_to_test.js"></script>
+    <script type="text/javascript" src="model/associations/has_many_test.js"></script>
     <script type="text/javascript" src="model/instance_manipulation_test.js"></script>
     <script type="text/javascript" src="model/record_lifecycle_test.js"></script>
     <script type="text/javascript" src="model/state_transitions_test.js"></script>
