Rework Associations to be stored on the class and use encoders.
 - Association instances are now stored in an AssociationCollection on each class
 - Each AssociationCollection generates it's storage dynamically the first time it's requested by traversing the class hierarchy. This means that until the first model is saved, associations can be added to parent classes after subclasses have been created, and the subclasses will still pick them up. In the interest of performance however, once a model is saved and a subclass' associations have been computed, adding new ones to ancestor classes will have no effect on the subclass.
 - Models now encode and decode associated records through the regular encoder/decoder system instead of doing it via a call out to the associations.

--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -53,6 +53,7 @@
     <script type="text/javascript" src="model/model_test.js"></script>
     <script type="text/javascript" src="model/class_querying_test.js"></script>
     <script type="text/javascript" src="model/associations/associations_test.js"></script>
+    <script type="text/javascript" src="model/associations/association_collection_test.js"></script>
     <script type="text/javascript" src="model/associations/has_one_test.js"></script>
     <script type="text/javascript" src="model/associations/belongs_to_test.js"></script>
     <script type="text/javascript" src="model/associations/has_many_test.js"></script>
