--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -53,6 +53,7 @@
     <script type="text/coffeescript" src="model/model_helper.coffee"></script>
     <script type="text/coffeescript" src="model/model_test.coffee"></script>
     <script type="text/coffeescript" src="model/associations/associations_test.coffee"></script>
+    <script type="text/coffeescript" src="model/associations/association_collection_test.coffee"></script>
     <script type="text/coffeescript" src="model/associations/has_one_test.coffee"></script>
     <script type="text/coffeescript" src="model/associations/belongs_to_test.coffee"></script>
     <script type="text/coffeescript" src="model/associations/has_many_test.coffee"></script>
