`data-view` implementation for instantiating custom view classes.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -90,6 +90,7 @@
     <script type="text/coffeescript" src="view/style_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/unbinding_test.coffee"></script>
     <script type="text/coffeescript" src="view/view_test.coffee"></script>
+    <script type="text/coffeescript" src="view/view_instance_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/yield_and_contentfor_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
 </head>
