Switch to using internal data with Batman._data.
 - Remove the functionality and tests for Batman.data attaching data to javascript objects.
 - Switch to Batman._data for all the view related datas so that users can attach data without fear of key collisions
 - Node: 'show' and 'hide' are supposed to be user land datas, so they are accessed through Batman.data instead of Batman._data.
 - Since Batman.data doesn't load the data for a node from the attributes like jQuery.data, remove the camelization feature for speed.
 - Reduce data tests to reflect these changes.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -50,6 +50,7 @@
     <script type="text/coffeescript" src="view/filter_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/filter_execution_test.coffee"></script>
     <script type="text/coffeescript" src="view/route_rendering_test.coffee"></script>
+    <script type="text/coffeescript" src="view/unbinding_test.coffee"></script>
     <script type="text/coffeescript" src="model/model_helper.coffee"></script>
     <script type="text/coffeescript" src="model/model_test.coffee"></script>
     <script type="text/coffeescript" src="model/associations/associations_test.coffee"></script>
