--- a/tests/batman/test_static.html
+++ b/tests/batman/test_static.html
@@ -49,6 +49,7 @@
     <script type="text/javascript" src="view/filter_rendering_test.js"></script>
     <script type="text/javascript" src="view/filter_execution_test.js"></script>
     <script type="text/javascript" src="view/route_rendering_test.js"></script>
+    <script type="text/javascript" src="view/unbinding_test.js"></script>
     <script type="text/javascript" src="model/model_helper.js"></script>
     <script type="text/javascript" src="model/model_test.js"></script>
     <script type="text/javascript" src="model/class_querying_test.js"></script>
