--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -41,6 +41,9 @@
     <script type="text/coffeescript" src="view/view_helper.coffee"></script>
     <script type="text/coffeescript" src="view/view_test.coffee"></script>
     <script type="text/coffeescript" src="view/simple_rendering_test.coffee"></script>
+    <script type="text/coffeescript" src="view/class_binding_test.coffee"></script>
+    <script type="text/coffeescript" src="view/event_binding_test.coffee"></script>
+    <script type="text/coffeescript" src="view/style_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/oneway_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/loop_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/nested_loop_rendering_test.coffee"></script>
