polymorphic functions for working with plain-JS and batman containers
- unify forEach behaviour of batman class prototypes to align with Array::forEach
- make Hash::update and ::replace work with other Batman.Hashes

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -24,6 +24,7 @@
     <script type="text/coffeescript" src="utilities/state_machine_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/function_name_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/interpolation_test.coffee"></script>
+    <script type="text/coffeescript" src="utilities/polymorphic_object_access_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/set_immediate_test.coffee"></script>
     <script type="text/coffeescript" src="object/class_dsl_test.coffee"></script>
     <script type="text/coffeescript" src="object/integration_test.coffee"></script>
