fix ordering test helpers

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -17,6 +17,10 @@
     <script type="text/coffeescript" src="../../src/extras/batman.rails.coffee"></script>
     <script type="text/coffeescript" src="../../src/extras/batman.i18n.coffee"></script>
     <script type="text/coffeescript">Batman.exportGlobals()</script>
+    <script type="text/coffeescript" src="model/model_helper.coffee"></script>
+    <script type="text/coffeescript" src="storage_adapter/storage_adapter_helper.coffee"></script>
+    <script type="text/coffeescript" src="storage_adapter/rest_storage_helper.coffee"></script>
+    <script type="text/coffeescript" src="view/view_helper.coffee"></script>
 
     <script type="text/coffeescript" src="accessible_test.coffee"></script>
     <script type="text/coffeescript" src="app_test.coffee"></script>
@@ -37,7 +41,6 @@
     <script type="text/coffeescript" src="model/dirty_keys_test.coffee"></script>
     <script type="text/coffeescript" src="model/encoders_test.coffee"></script>
     <script type="text/coffeescript" src="model/instance_manipulation_test.coffee"></script>
-    <script type="text/coffeescript" src="model/model_helper.coffee"></script>
     <script type="text/coffeescript" src="model/model_test.coffee"></script>
     <script type="text/coffeescript" src="model/record_lifecycle_test.coffee"></script>
     <script type="text/coffeescript" src="model/state_transitions_test.coffee"></script>
@@ -52,6 +55,7 @@
     <script type="text/coffeescript" src="observable/class_and_instance_observable_test.coffee"></script>
     <script type="text/coffeescript" src="observable/observable_test.coffee"></script>
     <script type="text/coffeescript" src="paginator_test.coffee"></script>
+    <script type="text/coffeescript" src="params_test.coffee"></script>
     <script type="text/coffeescript" src="property/keypath_test.coffee"></script>
     <script type="text/coffeescript" src="property/property_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
@@ -61,9 +65,7 @@
     <script type="text/coffeescript" src="set/unique_set_index_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/local_storage_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/rails_storage_test.coffee"></script>
-    <script type="text/coffeescript" src="storage_adapter/rest_storage_helper.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/rest_storage_test.coffee"></script>
-    <script type="text/coffeescript" src="storage_adapter/storage_adapter_helper.coffee"></script>
     <script type="text/coffeescript" src="utilities/function_name_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/get_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/interpolation_test.coffee"></script>
@@ -85,7 +87,6 @@
     <script type="text/coffeescript" src="view/simple_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/style_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/unbinding_test.coffee"></script>
-    <script type="text/coffeescript" src="view/view_helper.coffee"></script>
     <script type="text/coffeescript" src="view/view_test.coffee"></script>
     <script type="text/coffeescript" src="view/yield_and_contentfor_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
