ParamsManager and ParamsPusher classes for convenient redirecting
- app.get('currentParams') returns a Hash
- app.get('paramsManager') returns a ParamsManager
- app.set('paramsManager.foo', true) would update the params and redirect in-place
- app.get('paramsPusher') returns a ParamsPusher
- app.set('paramsPusher.foo', true) would update the params and redirect with a new history entry

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -55,6 +55,7 @@
     <script type="text/coffeescript" src="observable/class_and_instance_observable_test.coffee"></script>
     <script type="text/coffeescript" src="observable/observable_test.coffee"></script>
     <script type="text/coffeescript" src="paginator_test.coffee"></script>
+    <script type="text/coffeescript" src="params_manager_test.coffee"></script>
     <script type="text/coffeescript" src="property/keypath_test.coffee"></script>
     <script type="text/coffeescript" src="property/property_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
