--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -63,6 +63,7 @@
     <script type="text/coffeescript" src="set/set_test.coffee"></script>
     <script type="text/coffeescript" src="set/unique_set_index_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/local_storage_test.coffee"></script>
+    <script type="text/coffeescript" src="storage_adapter/session_storage_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/rails_storage_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/rest_storage_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/function_name_test.coffee"></script>
