Add a proper screenshot for the classifieds example.

--- a/examples.html
+++ b/examples.html
@@ -7,18 +7,23 @@ layout: default
 
 <!-- Begin content-column-wrapper -->
 <div id="content-column-wrapper">
-  
+
   <h2>Examples</h2>
   <p>This page aims to be a collection of everything that batman.js is capable of. Over time it will grow to include more comprehensive examples, in addition to live applications using batman.js.</p>
   <p>If you would like to have your app included in this list, please feel free to send a <a href="https://github.com/Shopify/batman/tree/gh-pages">pull request</a>!</p>
-  
+
   <h4>Getting Started</h4>
   <p>If you're just getting started with batman.js, these two examples will prove to be a great starting point. We are working on putting together more comprehensive tutorials. In the meantime, you may also want to check out the <a href="/documentation.html">documentation</a>, and you can always get more help in the <a href="/community.html">community</a>.</p><br />
 
 <!-- Begin content-column-1 -->
 <div id="content-column-1">
-  
+
   <ul class="feature-box">
+    <li class="feature-image"><a href="https://github.com/Shopify/batman-classifieds"><img src="images/classifieds_small.png" width="268" height="167"></a></li>
+    <li class="feature-description">
+      <h4>Batman Classifieds</h4>
+      <p>A complete open-source Batman app working on top of Rails. <a href="http://batman-classifieds.herokuapp.com">Live example</a> and <a href="https://github.com/Shopify/batman-classifieds">source code</a>.</p>
+    </li>
     <li class="feature-image"><a href="/alfred.html"><img src="images/alfred_small.jpg" width="268" height="161"></a></li>
     <li class="feature-description">
       <h4>Todo Tutorial</h4>
@@ -28,10 +33,7 @@ layout: default
       <h4>A Simple Twitter Search Client</h4>
       <p>The running example is running on Heroku <a href="http://afternoon-moon-519.herokuapp.com">here</a> and the code is on GitHub <a href="https://github.com/ktusznio/Bat-Tracer">here</a>.</p>
     </li>
-    <li class="feature-description">
-      <h4>Batman Classifieds</h4>
-      <p>A complete open-source Batman app working on top of Rails. <a href="http://batman-classifieds.heroku.com">Live example</a> and <a href="https://github.com/Shopify/batman-classifieds">source code</a>.</p>
-    </li>
+
   </ul>
 
 </div>
